--- a/index.html
+++ b/index.html
@@ -6,74 +6,258 @@
     <meta name="viewport" content="width=device-width, initial-scale=0">
     <link rel="stylesheet" href="style.css">
   </head>
-<div class="wrapper">
-  <div class="bg-image"></div>
-  <div class="bg-text">
-    <h1 style="font-size:50px;">California Distilate Co.</h1>
-    <p>The oasis in the desert</p>
-  </div>
 
-  <div class="box">
-    <img class="mySlides" src="img/test.jpg" style="width:100%; height: 475px;">
-    <img class="mySlides" src="img/test5.jpg" style="width:100%; height: 475px;">
-    <img class="mySlides" src="img/test2.jpg" style="width:100%; height: 475px;">
-    <img class="mySlides" src="img/test3.jpg" style="width:100%; height: 475px;">
-    <img class="mySlides" src="img/test4.jpg" style="width:100%; height: 475px;">
-    <div class="w3-center" style="width:100%">
-      <div class="w3-left" style= "top: 50%;" onclick="plusDivs(-1)">&#10094;</div>
-      <div class="w3-right" style="top:50%; right:0;" onclick="plusDivs(1)">&#10095;</div>
+
+<div class="bg-image">
+  <ul>
+    <li><a href="#team">The Team</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+
+<img src="img/logo2.png" style="position: absolute; width:80%; height: 1100px; left: 10%; top:-90px;">
+
+    <div id="myNav" class="overlay">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <div class="overlay-content">
+    <img src="img/icon.jpg" style="border-radius:50%; height: 300px; width:300px; object-fit:cover;">
+    <h1 align= centered style= "font-size: 200%;"> Alex Matzkin, COO</h1>
+    <p align= justify style="padding:5%;"> Alex Matzkin is a native of Tampa, Florida and a graduate of
+    the University of Miami. After four years in the medical device field with Nuvasive Spine, he decided
+    to enter the cannabis industry. In 2018, Alex founded SoCal Labs and California Distillate Company in
+    Cathedral City, California. In less than a year, his company grew into one of the largest wholesale
+    manufacturers of cannabis goods in California. Matzkin takes great pride in having the most streamlined
+    and efficient manufacturing processes in the industry. He has since implemented the same system for
+    multiple cannabis and CBD facilities across the United States. With his experience and expertise,
+    Courier Labs will carry out these same manufacturing processes that have been proven to be successful
+    time and time again. This opportunity to be one of Louisiana`s Exclusive manufacturers of CBD products
+    truly excites and inspires him to set the standards of manufacturing and quality above what is expected.
+     </p>
     </div>
-  </div>
+    </div>
 
-  <script>
-  var slideIndex = 1;
-  showDivs(slideIndex);
+    <div id="myNav1" class="overlay">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav1()">&times;</a>
+    <div class="overlay-content">
+    <img src="img/icon.png" style="border-radius:50%; height: 400px;">
+      <h1 align= centered style= "font-size: 200%;">Timmy Thompson CEO</h1>
+    <p align= justify style="padding:5%;"> Mr. Thompson and his family members are the lead investors in Cross Creek
+      and its affiliated funds. Mr. Thompson is a member of the Board of Directors of The Cross Group, an offshore
+      oilfield services provider. He has been associated with the company since its inception in 1997, serving in
+       various capacities, including as Senior Vice President of Business Development. Mr. Thompson is also a
+       principal shareholder in The Investment Group, Inc., a privately owned investment company with ownership
+       interests in operating companies, real estate, and other capital ventures. Previously, Mr. Thompson served as
+        President of Continental Financial Group, Inc., a home mortgage lender and financial services
+        company. In 2009, Mr. Thompson, along with his son Tyler Thompson, founded CCP with the goal of developing,
+        financing, and producing a strong slate of feature films with “A-list” talent and broad market appeal.
+        To date, Cross Creek has produced and financed 12 films and has grossed over $1 billion at the worldwide box
+         office.
+     </p>
+    </div>
+    </div>
 
-  function plusDivs(n) {
-    showDivs(slideIndex += n);
-  }
+    <div id="myNav2" class="overlay">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav2()">&times;</a>
+    <div class="overlay-content">
+    <img src="img/icon2.png" style="border-radius:50%; height:300px;">
+    <h1 align= centered style= "font-size: 200%;">Wayne P. Theriot, CFO</h1>
+    <p align= justify style="padding:5%;"> Wayne brings 27 years of hands on accounting experience to Courier Labs.
+      After graduating Nicholls State University, he entered the governmental sector working closely with parish
+      government and judicial oversight.  From there, he moved to the oilfield service sector with companies ranging
+      in size from $40 million annual revenue to $300 million annual revenue.  He successfully navigated the private
+      equity sale of one of his previous employers valued at $75 million dollars.
+     </p>
+    </div>
+    </div>
 
-  function currentDiv(n) {
-    showDivs(slideIndex = n);
-  }
+    <div id="myNav3" class="overlay">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav3()">&times;</a>
+    <div class="overlay-content">
+    <img src="img/icon3.png" style="border-radius:50%; height:300px;">
+    <h1 align= centered style= "font-size: 200%;">George Fakier, CCO</h1>
+    <p align= justify style="padding:5%;"> George Fakier is the Chief Compliance Officer with Courier Labs, with
+      responsibility for Compliance and licensing. Before joining Courier Labs, he worked in Investment Banking with
+      a discipline in Wealth Management. He has twenty years of demonstrated success providing leadership and
+      guidance over corporate, institutional and financial compliance oversight. George has served on the board of
+       directors of GreenBox POS Technology as the Chief Compliance Officer. He continues volunteer work for several
+        charities including the United Way and Habitat for humanity. George received a Bachelor of Science in Finance
+         from the University of Louisiana, Lafayette.
+     </p>
+    </div>
+    </div>
 
-  function showDivs(n) {
-    var i;
-    var x = document.getElementsByClassName("mySlides");
-    var dots = document.getElementsByClassName("demo");
-    if (n > x.length) {slideIndex = 1}
-    if (n < 1) {slideIndex = x.length}
-    for (i = 0; i < x.length; i++) {
-      x[i].style.display = "none";
+    <div id="myNav4" class="overlay">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav4()">&times;</a>
+    <div class="overlay-content">
+    <img src="img/icon4.png" style="border-radius:50%; height:300px;">
+    <h1 align= centered style= "font-size: 200%;">Dave  Williamson, CMO</h1>
+    <p align= justify style="padding:5%;"> Dave is charged with creating marketing and sales strategies for Courier
+      Labs. He brings 30 plus years of retail brand development in the petroleum marketing, gaming, and chain
+      convenience store industries.  With high energy and customer focus, Mr. Williamson has a successful track
+      record of building and leading strong business teams that compete at a "best-in-class" level.  He also holds a
+      Marketing degree from the University of Louisiana, Lafayette.
+     </p>
+    </div>
+    </div>
+
+    <div id="myNav5" class="overlay">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav5()">&times;</a>
+    <div class="overlay-content">
+    <img src="img/icon5.png" style="border-radius:50%; height: 300px;">
+    <h1 align= centered style= "font-size: 200%;">Michael Thompson, Business Development</h1>
+    <p align= justify style="padding:5%;"> Native of Houma, Louisiana, Mr. Thompson began his career as an executive
+      at Cross Creek Pictures while enrolled at the Los Angeles Film Academy. In 2013, Mr. Thompson co-founded
+      Gousse/Thompson Music, LLC, and played an instrumental role in structuring and managing its joint ventures with
+       Artistry Entertainment and Warner Chappell. 2014 Mr. Thompson partnered with a premium cannabis extraction
+       company and was responsible for implementing inbound marketing strategies that helped their clients increase
+       brand awareness, generate leads, and acquire new customers. 2016 Mr. Thompson formed Global Extracts to
+       capitalize on the emerging cannabis market.
+     </p>
+    </div>
+    </div>
+
+    <div class="wrapper" style="height:700px; top:800px; position:relative; width:100%;">
+      <p id="team" style="top:-46px; position: absolute;"/>
+      <p class="meet">MEET THE CREW</p>
+      <div class="column1" style="top:300px;">
+    <span style="font-size:30px;cursor:pointer; padding: 2%;" onclick="openNav()">
+      <img src="img/icon.jpg" style="height: 150px; width: 150px; object-fit:cover;"></span>
+      <div class="container" style="top:190px; color:white;">
+              <h2>Alex Matzkin, COO</h2>
+            </div>
+        </div>
+
+        <div class="column1" style="left:27%; top:300px;">
+    <span style="font-size:30px;cursor:pointer; padding: 2%;" onclick="openNav1()">
+      <img src="img/icon.png" style="border-radius:50%; height: 150px; width:150px;"></span>
+      <div class="container" style="top:190px; color:white;">
+              <h2>Timmy Thompson CEO</h2>
+          </div>
+        </div>
+
+        <div class="column1" style="left:39%; top:300px;">
+    <span style="font-size:30px;cursor:pointer; padding: 2%;" onclick="openNav2()">
+      <img src="img/icon2.png" style="border-radius:50%; height: 150px; width: 150px;"></span>
+      <div class="container" style="top:190px; color:white;">
+              <h2>Wayne P. Theriot, CFO</h2>
+          </div>
+        </div>
+
+        <div class="column1" style="left:51%; top:300px;">
+    <span style="font-size:30px;cursor:pointer; padding: 2%;" onclick="openNav3()">
+      <img src="img/icon3.png" style="border-radius:50%; height: 150px; width: 150px;"></span>
+      <div class="container" style="top:190px; color:white;">
+              <h2>George Fakier, CCO</h2>
+          </div>
+        </div>
+
+        <div class="column1" style="left:63%; top:300px;">
+    <span style="font-size:30px;cursor:pointer; padding: 2%;" onclick="openNav4()">
+      <img src="img/icon4.png" style="border-radius:50%; height: 150px; width: 150px;"></span>
+      <div class="container" style="top:190px; color:white;">
+              <h2>Dave Williamson, CMO</h2>
+          </div>
+        </div>
+        <div class="column1" style="left:75%; top:300px;">
+    <span style="font-size:30px;cursor:pointer; padding: 2%;" onclick="openNav5()">
+      <img src="img/icon5.png" style="border-radius:50%; height: 150px; width: 150px; display: cover;"></span>
+      <div class="container" style="top:190px; color:white;">
+              <h2>Michael Thompson, Business Development</h2>
+          </div>
+        </div>
+
+
+
+
+    <script>
+    function openNav() {
+      document.getElementById("myNav").style.width = "100%";
     }
-    for (i = 0; i < dots.length; i++) {
-      dots[i].className = dots[i].className.replace(" w3-white", "");
+
+    function closeNav() {
+      document.getElementById("myNav").style.width = "0%";
     }
-    x[slideIndex-1].style.display = "block";
-    dots[slideIndex-1].className += " w3-white";
-  }
-  </script>
 
-  <div class="topnav">
+    function openNav1() {
+      document.getElementById("myNav1").style.width = "100%";
+    }
 
-    <div class="topnav-centered">
-      <a href="index.html" class="active">Home</a>
+    function closeNav1() {
+      document.getElementById("myNav1").style.width = "0%";
+    }
+
+    function openNav2() {
+      document.getElementById("myNav2").style.width = "100%";
+    }
+
+    function closeNav2() {
+      document.getElementById("myNav2").style.width = "0%";
+    }
+    function openNav3() {
+      document.getElementById("myNav3").style.width = "100%";
+    }
+
+    function closeNav3() {
+      document.getElementById("myNav3").style.width = "0%";
+    }
+
+    function openNav4() {
+      document.getElementById("myNav4").style.width = "100%";
+    }
+
+    function closeNav4() {
+      document.getElementById("myNav4").style.width = "0%";
+    }
+
+    function openNav5() {
+      document.getElementById("myNav5").style.width = "100%";
+    }
+
+    function closeNav5() {
+      document.getElementById("myNav5").style.width = "0%";
+    }
+    </script>
+
+    <div  class="info">
+      <p id="about" style="top:-46px; position: absolute;"/>
+      <p align= "center" style="font-size:40px; font-family: georgia; padding:0 0 10px 0;">About Us</p>
+        <hr align= "center" size="5" color="black" width= "35%" style="position: absolute; left:32%; ">
+    <p align= center style="padding: 30px 20px; font-size: 17px; "> California Distillate Company opened the doors to its facility in Cathedral City under
+      SoCal Labs in April 2018. Founder, Alex Matzkin and his team went to work collaborating with cannabis
+      experts from the west coast to create one of the industries largest wholesale manufacturing companies.
+      SoCal Labs offers a variety of core competencies in the cannabis space such as, wholesale distillate,
+       crude, and toll processing.  With one of the largest capacities in California, SoCal labs has been a
+        reliable source for top shelf distillate to the premiere brands in the space. SoCal labs prides itself
+        on its clean products and consistency which has been paramount in their success.
+       </p>
+      </div>
+
+<div  class="info" style="top:1800px;">
+  <p id="contact" style="top:-46px; position: absolute;"/>
+      <div style="text-align:center">
+          <p align= "center" style="font-size:40px; font-family: georgia; padding:0 0 10px 0;">Contact Us</p>
+          <hr align= "center" size="5" color="black" width= "35%" style="position: absolute; left:32%; ">
+      </div>
+      <div class="row" style="padding: 30px 0;">
+        <div class="column">
+
+
+          <form method="POST" action="contact.php" name="contact_form">
+
+            <input type="text"  name="name" required placeholder="Your name..">
+            <input type="text"  name="number" placeholder="(xxx)xxx-xxxx..">
+            <input type="text"  name="email" placeholder="Your email address..">
+            <textarea  name="subject" placeholder="Message..." style="height:120px"></textarea>
+            <input type="submit" name="Submit"  value="Send" />
+
+
+          </form>
+        </div>
+
+      </div>
     </div>
 
-
-    <a href="contact.html">Contact</a>
-
-    <div class="topnav-right">
-
-      <a href="about.html" style="padding: 10% 50%; ">About</a>
-    </div>
 
   </div>
 
-
-
-
-
-</div>
-
-</html>
+  </html>
