--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <li><a href="#about">About</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
-  <img src="img/logo2.png" style="position: relative; width:80%; height: 80%; left: 10%; top:0px; z-index: 2;">
+  <img src="img/logo2.png" style="position: relative; width:1300px; height: 900px; left: 15%; top:0px; z-index: 2;">
 <div class="bg-image">
 
 
