--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="bg-image">
 
 
-<img src="img/logo2.png" style="position: absolute; width:80%; height: 30%; left: 10%; top:-4%; z-index: 2;">
+
 </div>
     <div id="myNav" class="overlay">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -245,13 +245,13 @@
         <div class="column">
 
 
-          <form method="post" action="contact.php" name="contact_form">
+          <form method="post" action="mailto:josegsanc@gmail.com" enctype="text/plain">
 
             <input type="text"  name="name" required placeholder="Your name..">
             <input type="text"  name="telephone" placeholder="(xxx)xxx-xxxx..">
             <input type="text"  name="email" placeholder="Your email address..">
             <textarea  name="subject" placeholder="Message..." style="height:120px"></textarea>
-            <input type="submit" name="Submit"  value="Send" />
+            <input type="submit" name="Submit"  value="Submit" >
 
 
           </form>
